

2.4.0  February 11, 2011


  General

    * Change from Moose to Any::Moose
      - This allows for the Mouse module which has far fewer dependencies, 
        starts up faster, and has a lower memory footprint.

    * Fix UPS bug in shipping to United Kingdom. CountryCode was always being 
      set to 'UK', when UPS needs their 'GB' value.

    * Apply perl coding style.

  USPS_Online

    * Document new International USPS service types.
    
    * Reformatting, debug-logging changes, remove unused code.
    
    * Remove asterisks and "trademark" symbols in addition to "registered"
      symbols.
    
    * Remove the never-quite-worked-right "find service by matching package 
      type" code. It was trying too hard to be helpful and will more often than 
      not just cover up the real problem -- that it can't find the service type 
      by the normal method.
    
    * Reversed the polarity to fix bug in USPS service check: Check current
      against desired instead of the other way around (which was often overzealous
      in matching).


2.2.1 Limited beta release


  General
  
    * [Fixed] You are overwriting a locally defined method (to_zip) with an 
      accessor.
    
    * [Fixed] USPS not matching service descriptions (Kevin D. McClellan)
      This resolves the "Nested quantifiers in regex" error. Thanks, Kevin!

    * Remove redundant 'Business.Shipping' from logging layout and fix logging
      messages with the wrong caller (due to off-by-one error in call frame 
      depth).


2.2.0 Limited beta release


  General
    
    * Upgraded from Class::MethodMaker to Moose.
    
    * Faster, simpler logging wrapper for Log4perl.
    
    * New version number scheme.
    
    * Many bug fixes, improvements, and style changes.

    * Changed from Subversion to Git.

  Backwards-Compatiblity:
  
    * New required module: Moose.
    
    * Minor API changes:
      - log_level() and log4perl.conf now use standard levels (not custom).