@@ -4,10 +4,6 @@ package Business::Shipping::UPS_Online::Package;
 
 Business::Shipping::UPS_Online::Package
 
-=head1 VERSION
-
-2.2.0
-
 =head1 METHODS
 
 =over 4
@@ -16,7 +12,6 @@ Business::Shipping::UPS_Online::Package
 
 use Any::Moose;
 use Business::Shipping::Package;
-use version; our $VERSION = qv('2.2.0');
 
 extends 'Business::Shipping::Package';
 
