@@ -4,10 +4,6 @@ package Business::Shipping::Util;
 
 Business::Shipping::Util - Miscellaneous functions
 
-=head1 VERSION
-
-2.2.0
-
 =head1 DESCRIPTION
 
 Misc functions.
@@ -26,7 +22,6 @@ use File::Find;
 use File::Copy;
 use Fcntl ':flock';
 use English;
-use version; our $VERSION = qv('2.2.0');
 use vars qw(@EXPORT_OK);
 
 @EXPORT_OK = qw( looks_like_number unique );
